tests/syntax_error/bad_toplevel_declaration.jou
92  # Error: expected a C function declaration or a function definition, got an integer
